[gd_scene load_steps=7 format=3 uid="uid://dxnakdkshmjf3"]

[ext_resource type="Script" path="res://Scripts/Player/GUI.gd" id="1_71x63"]
[ext_resource type="FontFile" uid="uid://d22luwsc6fmuu" path="res://Assets/Font/PixeloidSansBold-RpeJo.ttf" id="2_3x0x1"]
[ext_resource type="Texture2D" uid="uid://dblb5ji2l5p7a" path="res://Assets/ui_big_pieces.png" id="2_8opdj"]
[ext_resource type="PackedScene" uid="uid://d4cyoim416nt3" path="res://Scenes/Player/Inventory/Inventory.tscn" id="4_ds1yi"]
[ext_resource type="PackedScene" uid="uid://c51s0ody0w0ul" path="res://Scenes/Player/quests.tscn" id="4_hf42g"]
[ext_resource type="PackedScene" uid="uid://dihus2c0b17hi" path="res://Scenes/Player/profile.tscn" id="5_ofeb3"]

[node name="GUI" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_71x63")

[node name="hp_bar_Sprite" type="Sprite2D" parent="."]
position = Vector2(124, 22.25)
scale = Vector2(3, 2.07143)
texture = ExtResource("2_8opdj")
region_enabled = true
region_rect = Rect2(259.999, 39.0266, 72.9705, 21.2155)

[node name="hp_bar" type="ProgressBar" parent="."]
offset_left = 42.0
offset_top = 8.0
offset_right = 203.0
offset_bottom = 37.0
value = 50.0
show_percentage = false

[node name="Container" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0

[node name="Panel" type="Panel" parent="Container"]
layout_mode = 0
offset_left = 64.0
offset_top = 64.0
offset_right = 1088.0
offset_bottom = 576.0

[node name="VBoxContainer" type="VBoxContainer" parent="Container"]
layout_mode = 0
offset_left = 96.0
offset_top = 171.0
offset_right = 324.0
offset_bottom = 436.0
theme_override_constants/separation = 35

[node name="Profile" type="Button" parent="Container/VBoxContainer"]
custom_minimum_size = Vector2(0, 65)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_3x0x1")
theme_override_font_sizes/font_size = 18
text = "Profile"

[node name="InventoryButton" type="Button" parent="Container/VBoxContainer"]
custom_minimum_size = Vector2(0, 65)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_3x0x1")
theme_override_font_sizes/font_size = 18
disabled = true
text = "Inventory"

[node name="QuestButton" type="Button" parent="Container/VBoxContainer"]
custom_minimum_size = Vector2(0, 65)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_3x0x1")
theme_override_font_sizes/font_size = 18
text = "Quests"

[node name="Quests" parent="Container" instance=ExtResource("4_hf42g")]
visible = false

[node name="Inventory" parent="Container" instance=ExtResource("4_ds1yi")]
visible = false
layout_mode = 1
offset_right = 280.0

[node name="Profile" parent="Container" instance=ExtResource("5_ofeb3")]

[connection signal="pressed" from="Container/VBoxContainer/Profile" to="." method="_on_profile_pressed"]
[connection signal="pressed" from="Container/VBoxContainer/InventoryButton" to="." method="_on_inventory_button_pressed"]
[connection signal="pressed" from="Container/VBoxContainer/QuestButton" to="." method="_on_quest_button_pressed"]
